styling changes, fixed menu z-index

--- a/public/css/sass/control-bar.sass
+++ b/public/css/sass/control-bar.sass
@@ -26,11 +26,10 @@
     height: 48px
     min-width: 48px
     max-width: 48px
-    background: var(--white)
+    background: var(--yellow)
     border-radius: 1000px
     display: inline-flex
     align-items: center
-    border: 4px solid rgba(255,255,255,0.2)
     @include media("≤tablet")
       margin: 0 7px
     .feather
