--- a/public/css/sass/falk.sass
+++ b/public/css/sass/falk.sass
@@ -132,9 +132,10 @@ fieldset
 .tag
   font-weight: 600
   border-radius: 1000px
-  color: var(--yellow)
+  color: var(--background-color)
   display: inline-block
   padding: 7px 10px
+  background-color: var(--green)
   &.is-grey
     background-color: var(--gray)
   &.is-danger
@@ -494,8 +495,9 @@ table.songs
     position: relative
     overflow: hidden
     padding-bottom: 100%
-    border-right: 3px solid var(--yellow)
-    border-bottom: 3px solid var(--yellow)
+    //border-right: 3px solid var(--yellow)
+    //border-bottom: 3px solid var(--yellow)
+    //box-shadow: 2px 2px 1px 1px var(--yellow)
     object-fit: cover
     object-position: center
     img
@@ -537,13 +539,14 @@ table.songs
   &:before
     display: none
 #queue-list
-  background: var(--yellow-dark)
+  background: var(--green)
   color: var(--text-color)
   position: fixed
   top: 0
   height: 100vh
   width: 450px
   right: -450px
+  z-index: 2
   transition: right 0.3s ease-in-out
   display: block
   padding: 0
@@ -572,7 +575,7 @@ table.songs
     height: calc(100% - 50px - 1.8rem - 100px)
     overflow-y: scroll
     .subtitle
-      color: var(--yellow-light)
+      color: var(--green-lightest)
       margin-bottom: 0
     .row
       cursor: pointer
@@ -591,7 +594,7 @@ table.songs
           width: 25%
           background: rgba(0,0,0,0.1)
       &.is-playing
-        background-color: var(--yellow-darkest)
+        background-color: var(--green-dark)
         padding: 12px 0
         figure
           position: relative
